tools/tests/functional/negative_tests/low_level_api/dictionary_compression.cpp
/*******************************************************************************
 * Copyright (C) 2022 Intel Corporation
 *
 * SPDX-License-Identifier: MIT
 ******************************************************************************/

#include "tn_common.hpp"

namespace qpl::test {
QPL_LOW_LEVEL_API_NEGATIVE_TEST(dictionary_compression, DISABLED_zlib_wrapper_wrong_dict_id) {
    // Empty test
}

QPL_LOW_LEVEL_API_NEGATIVE_TEST(dictionary_compression, DISABLED_gzip_wrapper_wrong_dict_id) {
    // Empty test
}
} // namespace qpl::test
